// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots SQLite > composite-identifiers.sqlite.sql 1`] = `
"PRAGMA foreign_keys = ON;

-- Generated by Modrise
-- SQLite dialect

CREATE TABLE "ligne_commande" (
  "id" TEXT NOT NULL,
  "no_ligne" INTEGER NOT NULL,
  CONSTRAINT "pk_ligne_commande" PRIMARY KEY ("id", "no_ligne")
);
"
`;

exports[`snapshots SQLite > hotel.sqlite.sql 1`] = `
"PRAGMA foreign_keys = ON;

-- Generated by Modrise
-- SQLite dialect

CREATE TABLE "client" (
  "id_client" INTEGER NOT NULL,
  "nom" TEXT NOT NULL,
  "prenom" TEXT NOT NULL,
  "email" TEXT,
  "telephone" TEXT,
  CONSTRAINT "pk_client" PRIMARY KEY ("id_client"),
  CONSTRAINT "uq_client_email" UNIQUE ("email")
);

CREATE TABLE "chambre" (
  "id_chambre" INTEGER NOT NULL,
  "numero" TEXT NOT NULL,
  "type" TEXT NOT NULL,
  "etage" INTEGER,
  "prix_nuit" NUMERIC NOT NULL,
  CONSTRAINT "pk_chambre" PRIMARY KEY ("id_chambre"),
  CONSTRAINT "uq_chambre_numero" UNIQUE ("numero")
);

CREATE TABLE "reservation" (
  "id_reservation" INTEGER NOT NULL,
  "date_arrivee" TEXT NOT NULL,
  "date_depart" TEXT NOT NULL,
  "nombre_personnes" INTEGER NOT NULL,
  "statut" TEXT NOT NULL,
  "client_id_client" INTEGER NOT NULL,
  CONSTRAINT "pk_reservation" PRIMARY KEY ("id_reservation"),
  CONSTRAINT "fk_reservation_client" FOREIGN KEY ("client_id_client") REFERENCES "client" ("id_client")
);

CREATE TABLE "concerner" (
  "reservation_id_reservation" INTEGER NOT NULL,
  "chambre_id_chambre" INTEGER NOT NULL,
  "prix_convenu" NUMERIC,
  CONSTRAINT "pk_concerner" PRIMARY KEY ("reservation_id_reservation", "chambre_id_chambre"),
  CONSTRAINT "fk_concerner_reservation" FOREIGN KEY ("reservation_id_reservation") REFERENCES "reservation" ("id_reservation"),
  CONSTRAINT "fk_concerner_chambre" FOREIGN KEY ("chambre_id_chambre") REFERENCES "chambre" ("id_chambre")
);
"
`;

exports[`snapshots SQLite > many-to-many.sqlite.sql 1`] = `
"PRAGMA foreign_keys = ON;

-- Generated by Modrise
-- SQLite dialect

CREATE TABLE "commande" (
  "id" TEXT NOT NULL,
  CONSTRAINT "pk_commande" PRIMARY KEY ("id")
);

CREATE TABLE "produit" (
  "id" TEXT NOT NULL,
  CONSTRAINT "pk_produit" PRIMARY KEY ("id")
);

CREATE TABLE "contenir" (
  "commande_id" TEXT NOT NULL,
  "produit_id" TEXT NOT NULL,
  "quantite" INTEGER NOT NULL,
  CONSTRAINT "pk_contenir" PRIMARY KEY ("commande_id", "produit_id"),
  CONSTRAINT "fk_contenir_commande" FOREIGN KEY ("commande_id") REFERENCES "commande" ("id"),
  CONSTRAINT "fk_contenir_produit" FOREIGN KEY ("produit_id") REFERENCES "produit" ("id")
);
"
`;

exports[`snapshots SQLite > name-collisions.sqlite.sql 1`] = `
"PRAGMA foreign_keys = ON;

-- Generated by Modrise
-- SQLite dialect

CREATE TABLE "date_debut" (
  "id" TEXT NOT NULL,
  CONSTRAINT "pk_date_debut" PRIMARY KEY ("id")
);

CREATE TABLE "date_debut_2" (
  "id" TEXT NOT NULL,
  CONSTRAINT "pk_date_debut_2" PRIMARY KEY ("id")
);
"
`;

exports[`snapshots SQLite > one-to-many.sqlite.sql 1`] = `
"PRAGMA foreign_keys = ON;

-- Generated by Modrise
-- SQLite dialect

CREATE TABLE "client" (
  "id" TEXT NOT NULL,
  CONSTRAINT "pk_client" PRIMARY KEY ("id")
);

CREATE TABLE "commande" (
  "id" TEXT NOT NULL,
  "client_id" TEXT NOT NULL,
  CONSTRAINT "pk_commande" PRIMARY KEY ("id"),
  CONSTRAINT "fk_commande_client" FOREIGN KEY ("client_id") REFERENCES "client" ("id")
);
"
`;

exports[`snapshots SQLite > one-to-one.sqlite.sql 1`] = `
"PRAGMA foreign_keys = ON;

-- Generated by Modrise
-- SQLite dialect

CREATE TABLE "personne" (
  "id" TEXT NOT NULL,
  CONSTRAINT "pk_personne" PRIMARY KEY ("id")
);

CREATE TABLE "passeport" (
  "id" TEXT NOT NULL,
  "personne_id" TEXT,
  CONSTRAINT "pk_passeport" PRIMARY KEY ("id"),
  CONSTRAINT "uq_passeport_personne_id" UNIQUE ("personne_id"),
  CONSTRAINT "fk_passeport_personne" FOREIGN KEY ("personne_id") REFERENCES "personne" ("id")
);
"
`;

exports[`snapshots SQLite > reflexive.sqlite.sql 1`] = `
"PRAGMA foreign_keys = ON;

-- Generated by Modrise
-- SQLite dialect

CREATE TABLE "employe" (
  "id" TEXT NOT NULL,
  "manager_id" TEXT,
  CONSTRAINT "pk_employe" PRIMARY KEY ("id"),
  CONSTRAINT "fk_employe_employe" FOREIGN KEY ("manager_id") REFERENCES "employe" ("id")
);
"
`;

exports[`snapshots SQLite > ternary.sqlite.sql 1`] = `
"PRAGMA foreign_keys = ON;

-- Generated by Modrise
-- SQLite dialect

CREATE TABLE "enseignant" (
  "id" TEXT NOT NULL,
  CONSTRAINT "pk_enseignant" PRIMARY KEY ("id")
);

CREATE TABLE "matiere" (
  "id" TEXT NOT NULL,
  CONSTRAINT "pk_matiere" PRIMARY KEY ("id")
);

CREATE TABLE "classe" (
  "id" TEXT NOT NULL,
  CONSTRAINT "pk_classe" PRIMARY KEY ("id")
);

CREATE TABLE "enseigner" (
  "enseignant_id" TEXT NOT NULL,
  "matiere_id" TEXT NOT NULL,
  "classe_id" TEXT NOT NULL,
  CONSTRAINT "pk_enseigner" PRIMARY KEY ("enseignant_id", "matiere_id", "classe_id"),
  CONSTRAINT "fk_enseigner_enseignant" FOREIGN KEY ("enseignant_id") REFERENCES "enseignant" ("id"),
  CONSTRAINT "fk_enseigner_matiere" FOREIGN KEY ("matiere_id") REFERENCES "matiere" ("id"),
  CONSTRAINT "fk_enseigner_classe" FOREIGN KEY ("classe_id") REFERENCES "classe" ("id")
);
"
`;
